--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "serve": "browser-sync start --server public --files public",
     "start": "npm-run-all copy --parallel watch serve",
     "build": "npm-run-all copy:html build:*",
-    "postbuild": "postcss public/css/*.css -u autoprefixer cssnano -r --no-map"
+    "postbuild:css": "postcss public/css/*.css -u autoprefixer cssnano -r --no-map",
+    "postbuild:js": "uglifyjs-folder src/js -eo public/js",
+    "postbuild": "npm-run-all postbuild:css postbuild.js"
   },
   "dependencies": {
     "autoprefixer": "^10.4.2",
@@ -28,6 +30,7 @@
     "npm-run-all": "^4.1.5",
     "onchange": "^7.1.0",
     "postcss-cli": "^9.1.0",
-    "sass": "^1.49.8"
+    "sass": "^1.49.8",
+    "uglifyjs-folder": "^3.1.2"
   }
 }
